platform/bootstrap/networking/network-policies/allow-keycloak-from-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-keycloak
  namespace: keycloak
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: microbank-dev
    ports:
    - protocol: TCP
      port: 8080
  policyTypes:
  - Ingress
