platform/bootstrap/networking/network-policies/allow-minio-from-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-minio-from-workloads
  namespace: minio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: minio

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: workloads
      podSelector:
        matchLabels:
          app: document-service
    ports:
    - protocol: TCP
      port: 9000
  - from:
    - namespaceSelector:
        matchLabels:
          tier: ingress
    ports:
    - protocol: TCP
      port: 9001
