platform/bootstrap/networking/network-policies/allow-postgres-from-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-from-keycloak
  namespace: postgres
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: keycloak
    ports:
    - protocol: TCP
      port: 5432
  policyTypes:
  - Ingress
