platform/bootstrap/networking/network-policies/allow-postgres-from-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-from-workloads
  namespace: postgres
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql

  policyTypes:
  - Ingress

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: workloads
    - namespaceSelector:
        matchLabels:
          tier: identity
    ports:
    - protocol: TCP
      port: 5432
