platform/bootstrap/networking/network-policies/allow-redis-from-workloads.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-redis-from-workloads
  namespace: redis
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: microbank-dev
    ports:
    - protocol: TCP
      port: 6379
  policyTypes:
  - Ingress
